# instrument-scripts

./: README.md  pyproject.toml
src/instr/: main.py
src/instr/load/: dl3021.py
src/instr/psu/: channel.py  dp832a.py
src/rigol832a/: rigol832a.py
